add new algorithm to readme add script to test out other families

--- a/README.Rmd
+++ b/README.Rmd
@@ -297,7 +297,7 @@ sgd <- function(
   for(i in 1:n_it + 1L){
     # get gradient. First, run the particle filter
     filter_out <- object$pf_filter(
-      cfix = cfix, disp = numeric(), F. = F., Q = Q)
+      cfix = cfix, disp = numeric(), F. = F., Q = Q, seed = NULL)
     lls[i - 1L] <- c(logLik(filter_out))
     
     # then get the gradient associated with each particle and the log 
@@ -346,6 +346,135 @@ sgd <- function(
   
   list(estimates = ests, logLik = lls, F. = F., Q = Q, cfix = cfix)
 }
+
+# Stochastic gradient descent for mssm object using the Adam algorithm. The  
+# function assumes that the state vector is stationary.
+# 
+# Args:
+#   object: an object of class mssmFunc. 
+#   n_it: number of iterations. 
+#   mp: decay rate for first moment.
+#   vp: decay rate for secod moment.
+#   lr: learning rate.
+#   cfix: starting values for fixed coefficients. 
+#   F.: starting value for transition matrix in conditional distribution of the 
+#       current state given the previous state.
+#   Q: starting value for covariance matrix in conditional distribution of the 
+#      current state given the previous. 
+#   verbose: TRUE if output should be printed during estmation. 
+# 
+# Returns:
+#   List with estimates and the log-likelihood approximation at each iteration. 
+adam <- function(
+  object, n_it = 150L, mp = .9, vp = .999, lr = .01, cfix, F., Q, 
+  verbose = FALSE)
+{
+  # make checks
+  stopifnot(
+    inherits(object, "mssmFunc"), object$control$what == "gradient", n_it > 0L,
+    lr > 0., mp > 0, mp < 1, vp > 0, vp < 1)
+  n_fix <- nrow(object$X)
+  n_rng <- nrow(object$Z)
+
+  # objects for estimates at each iteration and log-likelihood approximations
+  ests <- matrix(
+    NA_real_, n_it + 1L, n_fix + n_rng * n_rng + n_rng * (n_rng  + 1L) / 2L)
+  ests[1L, ] <- c(cfix, F., Q[lower.tri(Q, diag = TRUE)])
+  lls <- rep(NA_real_, n_it)
+
+  # indices of the different components
+  idx_fix <- 1:n_fix
+  idx_F   <- 1:(n_rng * n_rng) + n_fix
+  idx_Q   <- 1:(n_rng * (n_rng  + 1L) / 2L) + n_fix + n_rng * n_rng
+
+  # we only want the lower part of `Q` so we make the following map for the
+  # gradient
+  library(matrixcalc) # TODO: get rid of this
+  gr_map <- matrix(
+    0., nrow = ncol(ests), ncol = length(cfix) + length(F.) + length(Q))
+  gr_map[idx_fix, idx_fix] <- diag(length(idx_fix))
+  gr_map[idx_F  , idx_F] <- diag(length(idx_F))
+  dup_mat <- duplication.matrix(ncol(Q))
+  gr_map[idx_Q  , -c(idx_fix, idx_F)] <- t(dup_mat)
+
+  # function to set the parameters
+  set_parems <- function(i){
+    cfix <<-             ests[i, idx_fix]
+    F.[] <<-             ests[i, idx_F  ]
+    Q[]  <<- dup_mat %*% ests[i, idx_Q  ]
+
+  }
+
+  # run gradient decent
+  max_half <- 25L
+  m <- NULL
+  v <- NULL
+  failed <- FALSE
+  for(i in 1:n_it + 1L){
+    # get gradient. First, run the particle filter
+    filter_out <- object$pf_filter(
+      cfix = cfix, disp = numeric(), F. = F., Q = Q, seed = NULL)
+    lls[i - 1L] <- c(logLik(filter_out))
+
+    # then get the gradient associated with each particle and the log
+    # normalized weight of the particles
+    grads <- tail(filter_out$pf_output, 1L)[[1L]]$stats
+    ws    <- tail(filter_out$pf_output, 1L)[[1L]]$ws_normalized
+
+    # compute the gradient and take a small step
+    grad <- colSums(t(grads) * drop(exp(ws)))
+
+    m <- if(is.null(m)) (1 - mp) * grad   else mp * m + (1 - mp) * grad
+    v <- if(is.null(v)) (1 - vp) * grad^2 else vp * v + (1 - vp) * grad^2
+    mh <- m / (1 - mp^(i - 1))
+    vh <- v / (1 - vp^(i - 1))
+    de <- mh / sqrt(vh + 1e-8)
+
+    lr_i <- lr
+    k <- 0L
+    while(k < max_half){
+      ests[i, ] <- ests[i - 1L, ] + lr_i * gr_map %*% de
+      set_parems(i)
+
+      # check that Q is positive definite and the system is stationary
+      c1 <- all(abs(eigen(F.)$values) < 1)
+      c2 <- all(eigen(Q)$values > 0)
+      if(c1 && c2)
+        break
+
+      # decrease learning rate
+      lr_i <- lr_i * .5
+      k <- k + 1L
+    }
+
+    # check if we failed to find a value within our constraints
+    if(k == max_half){
+      warning("failed to find solution within constraints")
+      failed <- TRUE
+      break
+    }
+
+    # print information if requested
+    if(verbose){
+      cat(sprintf(
+        "\nIt %5d: log-likelihood (current, max) %12.2f, %12.2f\n",
+        i - 1L, logLik(filter_out), max(lls, na.rm = TRUE)),
+        rep("-", 66), "\n", sep = "")
+      cat("cfix\n")
+      print(cfix)
+      cat("F\n")
+      print(F.)
+      cat("Q\n")
+      print(Q)
+      cat(sprintf("Gradient norm: %10.4f\n", norm(t(grad))))
+      print(get_ess(filter_out))
+
+    }
+  }
+
+  list(estimates = ests, logLik = lls, F. = F., Q = Q, cfix = cfix,
+       failed = failed)
+}
 ```
 
 ```{r use_sgd, cache = 1}
@@ -355,17 +484,25 @@ ll_func <- mssm(
   random = ~ Z, ti = time_idx, control = mssm_control(
     n_threads = 5L, N_part = 200L, what = "gradient"))
 
-# use stochastic gradient descent
+# use stochastic gradient descent with averaging
+set.seed(25164416)
 system.time( 
   res <- sgd(
     ll_func, F. = diag(.5, 2), Q = diag(2, 2), cfix = coef(glm_fit)))
+
+# use Adam algorithm instead
+set.seed(25164416)
+system.time( 
+  resa <- adam(
+    ll_func, F. = diag(.5, 2), Q = diag(2, 2), cfix = coef(glm_fit), 
+    lr = .1))
 ```
 
 A plot of the approximate log-likelihoods at each iteration is shown below 
 along with the final estimates. 
 
 ```{r show_use_sgd, fig.height = .fig_height_small}
-tail(res$logLik, 1L) # final log-likelihood approximation
+print(tail(res$logLik), digits = 6) # final log-likelihood approximations
 par(mar = c(5, 4, 1, 1))
 plot(     res$logLik       , type = "l")
 plot(tail(res$logLik, 100L), type = "l") # only the final iterations
@@ -374,6 +511,37 @@ plot(tail(res$logLik, 100L), type = "l") # only the final iterations
 res$F. 
 res$Q
 res$cfix
+
+# compare with output from Adam algorithm
+print(tail(resa$logLik), digits = 6) # final log-likelihood approximations
+plot(resa$logLik       , type = "l")
+resa$F. 
+resa$Q
+resa$cfix
+```
+
+We may want to use more particles. To do, we use the approximation 
+described in the next section.
+
+```{r cont_est, cache = 1}
+ll_func <- mssm(
+  fixed = y ~ X1 + X2 + Z, family = poisson(), data = dat, 
+  random = ~ Z, ti = time_idx, control = mssm_control(
+    n_threads = 5L, N_part = 1000L, what = "gradient",
+    which_ll_cp = "KD", aprx_eps = .1))
+
+set.seed(25164416)
+system.time( 
+  res_final <- adam(
+    ll_func, F. = diag(.5, 2), Q = diag(2, 2), cfix = coef(glm_fit), 
+    lr = .1))
+```
+
+```{r show_cont_est}
+plot(res_final$logLik, type = "l")
+res_final$F. 
+res_final$Q
+res_final$cfix
 ```
 
 ### Faster Approximation
@@ -434,7 +602,7 @@ local({
   f_400   <- func(  400)
   f_800   <- func(  800)
   f_1600  <- func( 1600)
-  f_51200 <- func(51200)
+  f_51200 <- func(51200) # <-- much larger
   
   # benchmark. Should grow ~ N log N
   microbenchmark::microbenchmark(
