--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,7 @@ We simulate data as follows.
 ```{r simulate, fig.height = .fig_height_small}
 # simulate path of state variables 
 set.seed(78727269)
-n_periods <- 110L
+n_periods <- 312L
 (F. <- matrix(c(.5, .1, 0, .8), 2L))
 (Q <- matrix(c(.5^2, .1, .1, .7^2), 2L))
 (Q_0 <- matrix(c(0.333, 0.194, 0.194, 1.46), 2L))
@@ -143,20 +143,10 @@ system.time(
 logLik(mssm_obj)
 ```
 
-As expected, we get a much higher log-likelihood. We can e.g., compare this 
-to a model where we use splines instead for each of the two random effects.
+We get a much larger log-likelihood as expected. We can plot the predicted 
+values of state variables from the filter distribution.
 
-```{r use_splines}
-# compare with GLM with spline
-library(splines)
-logLik(glm(y ~ X1 + X2 + Z * ns(time_idx, df = 20, intercept = TRUE)- 1, 
-           poisson(), dat))
-```
-
-We can plot the predicted values of state variables from the filter 
-distribution.
-
-```{r plot_filter, fig.height = .fig_height_small}
+```{r plot_filter, fig.height = .fig_height_small, fig.width = 12L}
 # plot estiamtes 
 filter_means <- plot(mssm_obj)
 
@@ -340,6 +330,8 @@ sgd <- function(
       print(F.)
       cat("Q\n")
       print(Q)
+      cat(sprintf("Gradient norm: %10.4f\n", norm(t(grad))))
+      print(get_ess(filter_out))
       
     }
   } 
@@ -479,7 +471,7 @@ adam <- function(
 
 ```{r use_sgd, cache = 1}
 # setup mssmFunc object to use
-ll_func <- mssm(
+ll_func <- mssm(  
   fixed = y ~ X1 + X2 + Z, family = poisson(), data = dat, 
   random = ~ Z, ti = time_idx, control = mssm_control(
     n_threads = 5L, N_part = 200L, what = "gradient"))
@@ -488,7 +480,8 @@ ll_func <- mssm(
 set.seed(25164416)
 system.time( 
   res <- sgd(
-    ll_func, F. = diag(.5, 2), Q = diag(2, 2), cfix = coef(glm_fit)))
+    ll_func, F. = diag(.5, 2), Q = diag(1, 2), cfix = coef(glm_fit), 
+    lrs = .001 * (1:150L)^(-1/2)))
 
 # use Adam algorithm instead
 set.seed(25164416)
@@ -637,7 +630,7 @@ true parameters.
 ll_compare <- local({
   N_use <- 500L 
   # we alter the seed in each run. First, the exact method
-  ll_no_approx <- sapply(1:1000, function(seed){
+  ll_no_approx <- sapply(1:200, function(seed){
     ll_func <- mssm(
       fixed = y ~ X1 + X2 + Z, family = poisson(), data = dat,
       random = ~ Z, ti = time_idx, control = mssm_control(
@@ -649,7 +642,7 @@ ll_compare <- local({
   })
   
   # then the approximation
-  ll_approx <- sapply(1:1000, function(seed){
+  ll_approx <- sapply(1:200, function(seed){
     ll_func <- mssm(
       fixed = y ~ X1 + X2 + Z, family = poisson(), data = dat,
       random = ~ Z, ti = time_idx, control = mssm_control(
